style: align options and fix styles

--- a/app/src/App.less
+++ b/app/src/App.less
@@ -35,29 +35,27 @@ html {
   min-height: 95vh;
 }
 
-.ant-card-meta-title, .ant-card-meta-title h4 {
+.ant-card-meta-title, .ant-card-meta-title h4, .ant-list-item-meta-title {
   margin-bottom: 0 !important;
 
 }
-.ant-card-meta-description {
+.ant-card-meta-description, .ant-list-item-meta-description {
   font-size: 1.1rem;
 }
 
-.ant-card-meta-title h4 > a {
+.ant-card-meta-title h4 > a, .ant-list-item-meta-title > a {
   color: white;
   font-size: 1.2rem;
   font-weight: 600;
- 
-  
+}
+
+.main-post > .ant-list-item-action { 
+  margin-left: 90px; 
 }
 
 code {
   color: lightslategrey;
 }
-
-// .ant-card-meta-description {
-//   margin-left: 80px;
-// }
 
 .ant-input:focus {
   border-color: transparent;
@@ -83,11 +81,7 @@ code {
   // background-color: rgb(27, 27, 27);
 }
 
-h4.ant-list-item-meta-title {
-  font-size: 1.1rem;
-  font-weight: 600;
-  overflow-wrap: anywhere;
-}
+
 
 #root {
   height: 100%;
